Branch data changes

--- a/project1/webapp/view/BranchData.view.xml
+++ b/project1/webapp/view/BranchData.view.xml
@@ -1,136 +1,62 @@
-<mvc:View
-    controllerName="sap.ui.com.project1.controller.BranchData"
+<mvc:View controllerName="sap.ui.com.project1.controller.BranchData"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
     xmlns:core="sap.ui.core"
     xmlns:fb="sap.ui.comp.filterbar"
     displayBlock="true"
-    busyIndicatorDelay="0"
->
+    busyIndicatorDelay="0">
     <Page showHeader="true">
         <headerContent>
-            <core:Fragment
-                fragmentName="sap.ui.com.project1.fragment.Header"
-                type="XML"
-            />
+            <core:Fragment fragmentName="sap.ui.com.project1.fragment.Header" type="XML"/>
         </headerContent>
         <content>
-            <fb:FilterBar
-                id="MD_id_Filterbar"
-                persistencyKey="myPersKey"
-                useToolbar="false"
-                clear="MD_onPressClear"
-                showClearOnFB="true"
-                search="MD_onSearch"
-                showFilterConfiguration="false"
-                filterContainerWidth="auto"
-            >
+            <fb:FilterBar id="MD_id_Filterbar" persistencyKey="myPersKey" useToolbar="false" clear="MD_onPressClear"
+                showClearOnFB="true" search="MD_onSearch" showFilterConfiguration="false" filterContainerWidth="auto">
                 <fb:filterGroupItems>
-                    <fb:FilterGroupItem
-                        name="Name"
-                        label="Branch Code"
-                        groupName="Group"
-                        visibleInFilterBar="true"
-                    >
+                    <fb:FilterGroupItem name="Name" label="Branch Code" groupName="Group" visibleInFilterBar="true" >
                         <fb:control>
-                            <ComboBox
-                                id="MD_id_BranchCode"
-                                items="{mainModel>/}"
-                                showSecondaryValues="true"
-                                showClearIcon="true"
-                                width="100%"
-                            >
-                                <core:ListItem
-                                    key="{mainModel>Name}"
-                                    text="{mainModel>Name}"
-                                    additionalText="{mainModel>BranchID}"
-                                />
+                            <ComboBox id="MD_id_BranchCode" items="{mainModel>/}" showSecondaryValues="true"
+                                showClearIcon="true" width="100%">
+                            <core:ListItem key="{mainModel>Name}" text="{mainModel>Name}" additionalText="{mainModel>BranchID}"/>
                             </ComboBox>
                         </fb:control>
                     </fb:FilterGroupItem>
                 </fb:filterGroupItems>
                 <fb:filterGroupItems>
-                    <fb:FilterGroupItem
-                        name="Pincode"
-                        label="Pin Code"
-                        groupName="Group"
-                        visibleInFilterBar="true"
-                    >
+                    <fb:FilterGroupItem name="Pincode" label="Pin Code" groupName="Group" visibleInFilterBar="true">
                         <fb:control>
-                            <SearchField
-                                id="MD_id_SearchField"
-                                width="250px"
-                                liveChange="onGlobalSearch"
-                                placeholder="Search"
-                            />
+                            <SearchField id="MD_id_SearchField" width="250px" liveChange="onGlobalSearch" placeholder="Search"/>
                         </fb:control>
                     </fb:FilterGroupItem>
                 </fb:filterGroupItems>
             </fb:FilterBar>
-            <Table
-                id="id_MD_Table"
-                mode="MultiSelect"
-                sticky="ColumnHeaders,HeaderToolbar"
-                growing="true"
-                busyIndicatorDelay="0"
-                growingThreshold="100"
-                alternateRowColors="true"
-                selectionChange="MC_onTableSelectionChange"
-                items="{mainModel>/}"
-                updateFinished="onTableUpdateFinished"
-            >
+            <Table id="id_MD_Table" mode="MultiSelect" sticky="ColumnHeaders,HeaderToolbar" growing="true"
+                busyIndicatorDelay="0" growingThreshold="100" alternateRowColors="true" selectionChange="MC_onTableSelectionChange"
+                items="{mainModel>/}" updateFinished="onTableUpdateFinished">
                 <headerToolbar>
                     <OverflowToolbar>
                         <Title text="Branch Details ({mainModel>/count})" />
                         <ToolbarSpacer />
-                        <Button
-                            text="Add"
-                            press="MD_AddButtonPress"
-                            class="myUnifiedBtn"
-                        />
-                        <Button
-                            text="Edit"
-                            press="MD_UpdateTableRow"
-                            class="myUnifiedBtn"
-                        />
-                        <Button
-                            text="Delete"
-                            press="MD_DeleteRow"
-                            class="myUnifiedBtn"
-                        />
-                        <Button
-                            text="Download"
-                            press="MD_onDownload"
-                            class="myUnifiedBtn"
-                        />
+                        <Button text="Add" press="MD_AddButtonPress" class="myUnifiedBtn"/>
+                        <Button text="Edit" press="MD_UpdateTableRow" class="myUnifiedBtn"/>
+                        <Button text="Delete" press="MD_DeleteRow" class="myUnifiedBtn"/>
+                        <Button text="Download" press="MD_onDownload" class="myUnifiedBtn"/>
                     </OverflowToolbar>
                 </headerToolbar>
                 <columns>
                     <Column demandPopin="true">
                         <Text text="Branch Code" />
                     </Column>
-                    <Column
-                        demandPopin="true"
-                        minScreenWidth="Tablet"
-                    >
+                    <Column demandPopin="true"  minScreenWidth="Tablet" >
                         <Text text="Branch Name" />
                     </Column>
-                    <Column
-                        demandPopin="true"
-                        minScreenWidth="Tablet"
-                    >
+                  <Column demandPopin="true"  minScreenWidth="Tablet" >
                         <Text text="Address" />
                     </Column>
-                    <Column
-                        demandPopin="true"
-                        minScreenWidth="Tablet"
-                    >
+                   <Column demandPopin="true"  minScreenWidth="Tablet" >
                         <Text text="Pin Code" />
                     </Column>
-                    <Column
-                        demandPopin="true"
-                        minScreenWidth="Tablet"
-                    >
+                    <Column demandPopin="true"  minScreenWidth="Tablet" >
                         <Text text="Contact Number" />
                     </Column>
                     <Column demandPopin="true">
@@ -142,10 +68,7 @@
                     <Column demandPopin="true">
                         <Text text="City" />
                     </Column>
-                    <Column
-                        demandPopin="true"
-                        minScreenWidth="Tablet"
-                    >
+                    <Column demandPopin="true"  minScreenWidth="Tablet" >
                         <Text text="Penalty" />
                     </Column>
                     <Column  demandPopin="true">
