manage invoice changes

--- a/project1/webapp/view/ManageInvoiceDetails.view.xml
+++ b/project1/webapp/view/ManageInvoiceDetails.view.xml
@@ -176,7 +176,7 @@
 													<m:Input value="{ManageInvoiceItemModel>Discount}"  valueHelpRequest="CD_onDiscountInfoPress" valueHelpIconSrc="sap-icon://message-information" editable="{visiablityPlay>/editable}" change="Comp_OnChangeDiscount" textAlign="End" maxLength="15" valueStateText="{i18n>discountInfoText}" />
 												</m:cells>
 												<m:cells>
-													<m:Input value="{path:'ManageInvoiceItemModel>Total',formatter: '.Formatter.fromatNumber'}" editable="{ManageInvoiceItemModel>editable}" textAlign="End" change="onChangeTotal" />
+													<m:Input value="{path:'ManageInvoiceItemModel>Total',formatter: '.Formatter.fromatNumber'}" textAlign="End" change="onChangeTotal" editable="{visiablityPlay>/editable}" />
 												</m:cells>
 											</m:ColumnListItem>
 										</m:items>
